--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,7 @@ jobs:
         cache: 'npm'
     - run: cd backend-ts && npm i
     - run: cd frontend && npm i
-    - run: npm run build --if-present
+    - run: cd frontend && npm run build --if-present
+    - run: cd backend-ts && npm run build --if-present
     - run: cd backend-ts && npm test
     - run: cd frontend && npm test
