--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,9 +27,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: cd backend-ts && npm i
-    - run: cd frontend && npm i
-    - run: cd frontend && npm run build --if-present
-    - run: cd backend-ts && npm run build --if-present
-    - run: cd backend-ts && npm test
-    - run: cd frontend && npm test
+    - name: 依存関係のインストール(バックエンド)
+      run: cd backend-ts && npm ci    
+    - name: 依存関係のインストール(フロントエンド)
+      run: cd frontend && npm ci
+    - name: フロントエンドのビルド
+      run: cd frontend && npm run build --if-present
+    - name: バックエンドのビルド
+      run: cd backend-ts && npm run build --if-present
+    - name: ユニットテスト(バックエンド)
+      run: cd backend-ts && npm test
+    - name: ユニットテスト(フロントエンド)
+      run: cd frontend && npm test
