--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,13 +29,23 @@ jobs:
         cache: 'npm'
     - name: 依存関係のインストール(バックエンド)
       run: cd backend-ts && npm ci    
-    - name: 依存関係のインストール(フロントエンド)
-      run: cd frontend && npm ci
-    - name: フロントエンドのビルド
-      run: cd frontend && npm run build --if-present
     - name: バックエンドのビルド
       run: cd backend-ts && npm run build --if-present
     - name: ユニットテスト(バックエンド)
       run: cd backend-ts && npm test
-    - name: ユニットテスト(フロントエンド)
-      run: cd frontend && npm test
+    
+  Frontend-Ci:
+
+    name: CI(フロントエンド)
+    needs: build
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+    steps:
+      - name: 依存関係のインストール
+        run: cd frontend && npm ci
+      - name: ビルド
+        run: cd frontend && npm run build --if-present
+      - name: ユニットテスト
+        run: cd frontend && npm test
