--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,8 +44,8 @@ jobs:
         working-directory: frontend
     steps:
       - name: 依存関係のインストール
-        run: cd frontend && npm ci
+        run: npm ci
       - name: ビルド
-        run: cd frontend && npm run build --if-present
+        run: npm run build --if-present
       - name: ユニットテスト
-        run: cd frontend && npm test
+        run: npm test
