フロントエンド側のコマンドを変更

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,10 +39,20 @@ jobs:
     name: CI(フロントエンド)
     needs: build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [22.x , 20.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     defaults:
       run:
-        working-directory: ./frontend
+        working-directory: frontend
     steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - name: 依存関係のインストール
         run: npm ci
       - name: ビルド
