CIをバックエンド，フロントエンドで分離

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,15 +11,17 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  backend-Ci:
+    name: CI(バックエンド)
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [22.x , 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    defaults:
+      run:
+        working-directory: frontend
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
@@ -27,17 +29,15 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: 依存関係のインストール(バックエンド)
-      run: cd backend-ts && npm ci    
-    - name: バックエンドのビルド
-      run: cd backend-ts && npm run build --if-present
-    - name: ユニットテスト(バックエンド)
-      run: cd backend-ts && npm test
+    - name: 依存関係のインストール
+      run: npm ci    
+    - name: ビルド
+      run: npm run build --if-present
+    - name: ユニットテスト
+      run: npm test
     
   Frontend-Ci:
-
     name: CI(フロントエンド)
-    needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
