--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     defaults:
       run:
-        working-directory: frontend
+        working-directory: backend-ts
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js ${{ matrix.node-version }}
@@ -32,7 +32,7 @@ jobs:
     - name: 依存関係のインストール
       run: npm ci    
     - name: ビルド
-      run: npm run build --if-present
+      run: npm run build
     - name: ユニットテスト
       run: npm test
     
@@ -56,6 +56,6 @@ jobs:
       - name: 依存関係のインストール
         run: npm ci
       - name: ビルド
-        run: npm run build --if-present
+        run: npm run build
       - name: ユニットテスト
         run: npm test
