--- a/backend-ts/package.json
+++ b/backend-ts/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "A simple talent management app",
   "devDependencies": {
-    "@aws-sdk/client-dynamodb": "^3.788.0",
+    "@aws-sdk/client-dynamodb": "^3.821.0",
     "@types/aws-lambda": "^8.10.149",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
@@ -24,6 +24,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.821.0",
     "io-ts": "^2.2.22",
     "use-file-upload": "^1.0.11"
   }
